# llm-inference-benchmark

./: .gitignore  Cargo.toml  README.md  bench.toml
.cargo/: config.toml
configs/: default.toml
reports/latest/: report.html  results.csv  results.json
reports/linux-x86_64__CPU-Intel_Core_Ultra_9_285K__GPU-NVIDIA_GeForce_RTX_4080_SUPER__20260517T004235/: report.html  results.csv  results.json
reports/macos-aarch64__CPU-Apple_M4__GPU-Apple_Silicon_GPU__20260516T232836/: report.html  results.csv  results.json
reports/samples/: cross-machine-matrix.html
reports/samples/windows-x86_64__CPU-AMD_Ryzen_9_9950X3D_16_Core_Processor__GPU-NVIDIA_GeForce_RTX_5090__20260517T122142/: report.html  results.csv  results.json
reports/samples/windows-x86_64__CPU-Intel_Core_Ultra_9_285K__GPU-NVIDIA_GeForce_RTX_4080_SUPER__20260516T225708/: report.html  results.csv  results.json
scripts/: gen_cross_machine_matrix.py
src/: assets.rs  cli.rs  compare.rs  config.rs  doctor.rs  hardware.rs  interrupt.rs  lib.rs  llama.rs  main.rs  metrics.rs  report.rs  runner.rs  scoring.rs  setup.rs  workloads.rs
tests/: e2e.rs  integration.rs
